--- a/index.html
+++ b/index.html
@@ -2,6 +2,6 @@
 <html>
     <head></head>
         <body>
-            <h1> padding-left = "20%">阿道夫球</h1>
+            <h1>我是你的二儿子阿道夫球</h1>
                 <h2>你好小猪爹</h2>
         </body>
